--- a/founding-members.html
+++ b/founding-members.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-rPOIP6Bu0Q mbr-parallax-background" id="content5-36">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content5 cid-rPOIP6Bu0Q mbr-parallax-background" id="content5-36">
 
     
 
@@ -365,7 +365,7 @@
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
                 <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">Contact <strong>Me</strong></h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Please leave a message below if you want to support me as a valued <strong>Par</strong>, <strong>Pro</strong> or <strong>Premium</strong> sponsor or when you need more information or have any other questions.</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Please leave a message below if you want to support me as a valued <strong>Par</strong>, <strong>Pro</strong> or <strong>Premium</strong> sponsor, when you need more information or have any other questions.</h3>
             </div>
         </div>
     </div>
@@ -373,7 +373,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="q9SpHFVghkTZu9UGAXryYDdsVmr8UcPLe4fucWkLUdxs4C30V/7C8cd+co6DyoXmgF6JSRl7AaGRyHzWQuar8x3ZFCWz5K+ANHBCtFT4cINY23w/chE7YlCHPj7Yz69s">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eZlBbMM4QBCTFjRV6KgxzACRlOUgB3l5jnDdPJFLpspe8jXzHjTVb5ci0TTyzYRJyIGrkOzMzH2SdtAfAaIvLBU74Lossw/xKBt+lkUtQ8Be5kTppjICsR9SvgrW/VNv">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for your interest. I will be in touch with you soon!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
