--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section form1 cid-rPKXfYeOPp" id="form1-2y">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section form1 cid-rPKXfYeOPp" id="form1-2y">
 
     
 
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
                 <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">Contact <strong>Me</strong></h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Please leave a message below if you want to support me as a valued <strong>Par</strong>, <strong>Pro</strong> or <strong>Premium</strong> sponsor, when you need more information or have any other questions.</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Please leave a message below if you want to support me as a valued <strong>Par</strong>, <strong>Pro</strong> or <strong>Premium</strong> business partner, when you need more information or have any other questions.</h3>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WM14hASgNDrM+rkr+POYSndT3nFNE1TLOKKXZxlfrckv+EMEOBHBkdaPrNytbu1Yn+S/DIvOo7W2C2CWi4/kYEO0OptXmRWKmz9d4Eb0cpu5vxdmdHcErod8jXcOT+sW">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mpi7S0nJ6j9lt6GTdAyQjAiXP2WrsqotKK1r+S/frLlX2Cs4GBX5jNeJKUiHlhU5/S09C6ZVG/ZVXdc2/cqdyOjyT9pOaYiewqyexpHezb57Gw0FiTF79btrs440MRFG">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for your interest. We will contact you soon!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
