--- a/founding-members.html
+++ b/founding-members.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="mbr-section content5 cid-rPOIP6Bu0Q mbr-parallax-background" id="content5-36">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section content5 cid-rPOIP6Bu0Q mbr-parallax-background" id="content5-36">
 
     
 
@@ -129,7 +129,7 @@
                 <div class="media-container-row">
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-7"><strong>Founding Member Card<br></strong>Each Founding Member will receive an official Founding Member Card as a physical certificate of my appreciation. This card contains a unique cryptographically secured token that grants you, as a Founding Member, access to exclusive business and golf related events as part of your selected&nbsp;<strong>Par</strong>, <strong>Pro</strong> or <strong>Elite</strong> sponsor package. &nbsp;&nbsp;</p>
+                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-7"><strong>Founding Member Card<br></strong>Each Founding Member will receive an official Founding Member Card as a physical certificate of my appreciation. This card contains a unique cryptographically secured token that grants you, as a Founding Member, access to exclusive business and golf related events as part of your selected&nbsp;<strong>Par</strong>, <strong>Pro</strong> or <strong>Elite</strong>&nbsp;business package. &nbsp;&nbsp;</p>
                         </div>
                     </div>
                     <div class="mbr-figure" style="width: 60%;">
@@ -163,7 +163,7 @@
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7">
                             <li class="list-group-item">
-                                Interested in sponsoring and becoming more engaged in golf and business? Checkout my Par package!</li>
+                                Interested in becoming more engaged in golf and business? Checkout my Par package!</li>
                             <li class="list-group-item"><strong>12 x</strong> <a href="http://www.svenmaurits.com">Par Deals</a></li><li class="list-group-item"><strong>Fully</strong> tax deductible</li><br><li class="list-group-item"><strong>€ 750<br></strong>quarterly</li>
                         </ul>
                     </div>
@@ -346,7 +346,7 @@
                         Premium Member <strong>Deals</strong></h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-7">
-                        Make your brand stand out from the crowd! Your company gets all the attention, while Sven can fully focus on his golf game. Your company logo will be visible on all apparel, Sven's golf bag, his umbrella, website and social media publications.
+                        Make your brand stand out from the crowd! Your company gets all the attention, while Sven can fully focus on his golf game. Your company logo will be visible on all Sven's apparel, golf bag, umbrella, website and social media publications.
                         </p>
                     </div>
 
@@ -366,7 +366,7 @@
     <div class="container">
         <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2"><strong>Cost	Breakdown	and	Expenses</strong></h2>
 
-        <h3 class="mbr-section-subtitle mbr-fonts-style display-5">The money received from Founding Members allows for many different uses that will help reduce the financial burdens that are placed upon many aspiring tour players. The money will be spent on the items as described below.</h3>
+        <h3 class="mbr-section-subtitle mbr-fonts-style display-5">The financial support from Founding Members allows me to reduce the financial burdens that are placed upon me as an aspiring European Tour player. 100% of the amount received will be spent on items as divided and described below.</h3>
     
         <div class="media-container-row pt-5 mt-2">
             <div class="card p-3 align-center">
@@ -442,7 +442,7 @@
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
                 <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">Contact <strong>Me</strong></h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Please leave a message below if you want to support me as a valued <strong>Par</strong>, <strong>Pro</strong> or <strong>Premium</strong> sponsor, when you need more information or have any other questions.</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Please leave a message below if you want to support me as a valued <strong>Par</strong>, <strong>Pro</strong> or <strong>Premium</strong> business partner, when you need more information or have any other questions.</h3>
             </div>
         </div>
     </div>
@@ -450,7 +450,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6bAwp7w2IO0Zuid5Q8Obz1c0Uw/FFfeBlyZOPSU6xOQnbsfePwSeR87T63tfFfuCrlK85kQEYpN92QV++OUb7xrY+3E1cm6/gDKjM2S9TF04c3CNw4Dv6ATGabN0BZfI">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VB12zq9zgKIaMwJfQohd+1sFhGXmSFqKw8hO5L2ykUAACZl2d/Gbus7xRoSr9yRUTnkuOwMtxrP6qVLHMKcJD9C3AAhV7Ovc6Ci9zxPf5tsTH5o5R2NWfj81HDWx0Uoi">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for your interest. I will be in touch with you soon!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
