create github pages

--- a/founding-members.html
+++ b/founding-members.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section content5 cid-rPOIP6Bu0Q mbr-parallax-background" id="content5-36">
+<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section class="mbr-section content5 cid-rPOIP6Bu0Q mbr-parallax-background" id="content5-36">
 
     
 
@@ -432,7 +432,7 @@
     <div class="container">
         <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2"><strong>Prize Money </strong>Distribution</h2>
 
-        <h3 class="mbr-section-subtitle mbr-fonts-style display-5">For personal expenses I have planned to be fully self-sufficient by means of tournament earnings. Prize money will be my main source of income for personal expenses as well as marketing and management fees to build my own brand. 5% of all prize money earnings will be donated to charity.<br></h3>
+        <h3 class="mbr-section-subtitle mbr-fonts-style display-5">For personal expenses I have planned to be fully self-sufficient by means of tournament earnings. Prize money will be my main source of income for personal expenses as well as for marketing and management fees to build my own brand. 5% of all prize money earnings will be donated to charity.<br></h3>
     
         <div class="media-container-row pt-5 mt-2">
             <div class="card p-3 align-center">
@@ -496,7 +496,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rp5ZRm/8R6MtvsiMMZE425KZDzCIfM1jdGwypxARdysHdPKa33DlC+X/ApiOaqPD3J4Szz7af8cvgld0yhbbZVwpSwVPIgQhbkiJo38iPi6ULdFEIuDO+xUu2f4M4/X9">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="h+U7942vfIWNxXABQKaUUHYDNrSFSKt10+4tBqQHCh9eGWw0l8aTRLUTo+DsPMRIeQC9vHkCPE+O0KWG9SA8ZQ48nUSS5kLgyT8+ibd5P1Nm1cCliKDo6FJTFe8zDAOY">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for your interest. I will be in touch with you soon!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
