--- a/schedule.html
+++ b/schedule.html
@@ -61,7 +61,7 @@
                         TEAM</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="sponsors.html">
                         
-                        SPONSORS</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="schedule.html">
+                        PARTNERS</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="schedule.html">
                         
                         SCHEDULE</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="founding-members.html"><span class="mbri-hearth mbr-iconfont mbr-iconfont-btn"></span>
