--- a/schedule.html
+++ b/schedule.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header1 cid-rN7ytXRDy5" id="header1-27">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="header1 cid-rN7ytXRDy5" id="header1-27">
 
     
 
